# mini_game_engine

./: CH26_SPEC.md  CH27_SPEC.md  CH28_SPEC.md  CH29_SPEC.md  CH30_SPEC.md  CMakeLists.txt  CMakeLists.txt.Physx  CMakeLists.txt.glfw  CMakeLists.txt.imgui  CMakeLists0.txt  LOCAL_ASSETS.md  PROJECT_HANDOVER.md  README.md  ROADMAP_CH26_30.md  download_miniaudio.bat  setup.bat
data/levels/: boss.json  corridor.json  guard.json  hall.json  lab.json
data/models/fbx/: Death.fbx  Great Sword Slash (1).fbx  Great Sword Slash.fbx  Idle.fbx  Punch Combo.fbx  Punching.fbx  Running.fbx  Standing Death Left 01.fbx  Standing Jump Running.fbx  Sword And Shield Death.fbx  X Bot.fbx  Zombie Punching.fbx
data/models/fbx/enemies/mutant/: Mutant_Attack.fbx  Mutant_Death.fbx  Mutant_Idle.fbx  Mutant_Run.fbx
data/models/fbx/enemies/zombie/: Zombie_Attack.fbx  Zombie_Death.fbx  Zombie_Idle.fbx  Zombie_Running.fbx
data/shader/: README.md  basic2d.fs  basic2d.vs  basic3d.fs  basic3d.vs  line.fs  line.vs  material.fs  material.vs  particle3d.fs  particle3d.vs  phong.fs  phong.vs  skinning.fs  skinning.vs  skybox.fs  skybox.vs  skybox_tex.fs  sprite.fs  sprite.vs  tilemap.fs  tilemap.vs
data/texture/: README.md
depends/miniaudio/: README.md
examples/01_window/: README.md  main.cpp
examples/02_triangle/: README.md  main.cpp
examples/03_transform/: README.md  main.cpp
examples/04_sprite/: README.md  main.cpp
examples/05_collision/: README.md  main.cpp
examples/06_animation/: README.md  main.cpp
examples/07_platformer_physics/: README.md  main.cpp
examples/08_character_controller/: README.md  main.cpp
examples/09_tilemap/: README.md  main.cpp
examples/10_textured_tilemap/: README.md  main.cpp
examples/11_sprite_animation/: README.md  main.cpp
examples/12_camera_system/: README.md  main.cpp
examples/13_audio_system/: README.md  main.cpp
examples/14_combat_system/: README.md  main.cpp
examples/15_enemy_ai/: README.md  main.cpp
examples/16_room_system/: README.md  main.cpp
examples/17_ui_system/: README.md  main.cpp
examples/18_full_demo/: README.md  main.cpp
examples/19_3d_basics/: README.md  main.cpp
examples/20_model_loading/: README.md  main.cpp
examples/21_lighting_system/: README.md  main.cpp
examples/22_materials_textures/: README.md  main.cpp
examples/23_3d_camera/: README.md  main.cpp
examples/24_character_controller_3d/: README.md  main.cpp
examples/25_skeletal_animation/: README.md  main.cpp
examples/26_3d_combat/: README.md  main.cpp
examples/27_enemy_ai/: README.md  main.cpp
examples/28_scene_level/: README.md  main.cpp
examples/29_ui_audio/: README.md  main.cpp
examples/30_3d_demo/: README.md  main.cpp
source/ai/: EnemyAI.cpp  EnemyAI.h
source/animation/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  AnimationClip.h  Animator.cpp  Animator.h
source/audio/: Audio.h  AudioSystem.cpp  AudioSystem.h
source/camera/: Camera.h  Camera2D.cpp  Camera2D.h
source/combat/: CombatComponent.h  CombatSystem.h  DamageInfo.h  Hitbox.h
source/editor/: LevelEditor.h
source/engine/: Engine.cpp  Engine.h  ParticleSystem.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
source/engine3d/: Animator.cpp  Animator.h  AudioSystem3D.h  Camera3D.h  CharacterController3D.h  CombatSystem3D.h  EnemyAI3D.h  GameUI3D.h  Mesh3D.cpp  Mesh3D.h  ModelLoader.h  ParticleSystem3D.h  PhysicsWorld.h  SceneManager.h  Skybox.h  Texture3D.h
source/game/: CharacterController2D.cpp  CharacterController2D.h  Game.h  PlatformController.h
source/math/: Mat3.h  Mat4.h  Math.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h
source/physics/: AABB.h  Circle.h  Collision.h  Physics.h  PhysicsBody2D.h  PlatformPhysics.cpp  PlatformPhysics.h
source/scene/: RoomSystem.cpp  RoomSystem.h
source/tilemap/: Tilemap.cpp  Tilemap.h  TilemapRenderer.cpp  TilemapRenderer.h  TilemapSystem.h  Tileset.cpp  Tileset.h
source/ui/: HUD.h
